# ferryllm

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GOALS.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
desktop/: README.md  package-lock.json  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
docs/: architecture.md  claude-code.md  codex-bridge.md  compatibility.md  configuration.md  deployment.md  load-testing.md  prompt-caching.md  reasoning-control.md  server-plan.md
examples/: basic_server.rs  codexapis_server.rs  codexapis_test.rs  full_test.rs  load_test.rs  mock_openai_upstream.rs
examples/config/: codex-bridge-claude.toml  codexapis-responses.toml  codexapis.toml  gemini.toml  mock-openai.toml
scripts/: load_test.py
src/: adapter.rs  circuit.rs  config.rs  health.rs  ir.rs  lib.rs  router.rs  server.rs  token_observability.rs
src/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_responses.rs
src/entry/: anthropic.rs  openai.rs  openai_responses.rs
