[package]
name = "ferryllm"
version = "0.1.4"
edition = "2021"
description = "Universal LLM protocol middleware for OpenAI, Anthropic, Claude Code, and OpenAI-compatible backends."
license = "MIT"
repository = "https://github.com/caomengxuan666/ferryllm"
homepage = "https://github.com/caomengxuan666/ferryllm"
documentation = "https://docs.rs/ferryllm"
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "proxy", "gateway"]
categories = ["web-programming::http-server", "api-bindings", "command-line-utilities"]
exclude = [".claude/", ".codex/", ".agents/", "target/", "session-export.json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
async-trait = "0.1"
thiserror = "2"
toml = "0.9"
tiktoken-rs = { version = "0.11", optional = true }

[features]
default = ["http", "prompt-observability", "openai-responses"]
http = []
prompt-observability = ["dep:tiktoken-rs"]
openai-responses = []
gemini = []
